Fixing base64 issue